--- a/gb/ncid282_3.md
+++ b/gb/ncid282_3.md
@@ -1,4 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>社会万象</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777357.md#1" target="_blank">伊朗空袭美军和联军基地 引发国际谴责</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777357.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NJ6BB-150x120.jpg" align ="left"></a>伊朗在周三（1月7日）凌晨向伊拉克美军和联军基地发射多枚导弹，目前尚未传出有人员伤亡。北约、英国、德国和伊拉克谴责伊朗的暴力行动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 11:15 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11775908.md#1" target="_blank">天津权健董事长束昱辉获刑9年 罚款五千万</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11775908.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/VCG111183534895-600x400-2-150x120.jpg" align ="left"></a>今天（8日），天津权健自然医学科技发展有限公司（下称权健公司）董事长束昱辉等12人组织、领导传销活动一案公开宣判。其中束昱辉被判处有期徒刑9年，罚款五千万元人民币（下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 11:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11775949.md#1" target="_blank">伊朗15枚导弹袭美军基地 川普冷静回应</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11775949.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LS2S7-150x120.jpg" align ="left"></a>当地时间周三凌晨，伊朗向伊拉克美军基地发射多枚导弹，美国总统川普（特朗普）美东时间晚发推说，目前美方正在评估人员伤亡和损失，周三早上将对伊朗袭击发表声明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 10:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/7/n11775427.md#1" target="_blank">加州保安挺港 遭小粉红疯狂“国骂”并殴打</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/7/n11775427.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/IMG_0327-150x120.jpg" align ="left"></a>近日在加州华人聚居的罗兰岗（Rowland Heights），一名商场保安与华裔青年发生纠纷，双方发生激烈争执，最后出动警方调停。双方冲突源于两个月前，这名保安张贴支持“香港”民主运动的海报与发放传单，而华裔青年则高喊：“我爱共产党”，并用国骂“X你妈”破口大骂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 6:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/7/n11775337.md#1" target="_blank">弹劾程序 参院共和党免作证提案获过半支持</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/7/n11775337.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1198107629-150x120.jpg" align ="left"></a>美国参议院多数党领袖米奇·麦康奈尔（Mitch McConnell）周二（1月7日）宣布，已获得足够票数通过一项决议，启动对总统川普（特朗普）的弹劾审讯、而无需证人作证。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 6:49 AM							</td></tr>
@@ -18,8 +20,7 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/3/n11766192.md#1" target="_blank">麦康奈尔：弹劾案轮到参院上场 会冷静判断</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/3/n11766192.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-906260388-150x120.jpg" align ="left"></a>美国国会参议院多数党领袖米奇·麦康奈尔（Mitch McConnell）周五（1月3日）表示，众议院那边的弹劾程序已经结束，现在该轮到参议院作出冷静判断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 5:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/3/n11766037.md#1" target="_blank">凑成好字 40岁章子怡宣布新年二胎产子</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/3/n11766037.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/VCG111175203321_meitu_1-150x120.jpg" align ="left"></a>此前在美国待产的大陆女星章子怡，1月3日在微博发文晒照，宣布二胎产子：“2020年1月1日，我们的生命中多了一个他，从此我们的世界又多了一份幸福的牵挂！这是上天赐予我们的最美新年礼物，感恩！新年真好！祝福大家新年快乐！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/3/n11766183.md#1" target="_blank">武汉爆发神秘病毒 亚洲政府保持警觉</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/3/n11766183.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_HKG2003122958048-150x120.jpg" align ="left"></a>2019年年末，湖北武汉爆发“不明病毒性肺炎”疫情，疑似“SARS”卷土重来。在当局报告了44个病例后，亚洲各国和地区政府正在加强预防措施，以防止这种神秘疾病的爆发。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 2:08 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/2/n11763973.md#1" target="_blank">盘点2019美国经济 进入史上最长增长期</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/2/n11763973.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/200102150621100699-150x120.jpg" align ="left"></a>美国经济在2019年体现出强大的抗压性，克服了主流新闻头条里不断提到的经济衰退的忧虑，已进入了美国历史上最长的一次经济扩张期，也超过了1990年代的经济繁荣度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 4:44 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/2/n11763603.md#1" target="_blank">重庆元旦着火高楼涉神秘发展商</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/2/n11763603.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/p2564081a942833309-ss-150x120.jpg" align ="left"></a>2020元旦，重庆一幢高楼发生大火，被称作2020第一把火。引起外界关注的是，相关屋苑的发展商——神秘富豪张松桥。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 12:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11776079.md#1" target="_blank">每日三退声明精选（2020/01/07）</a><br></h3>本人年少时曾加入少先队和共青团，虽然已经过去很多年，但回想起来，确实证明了这是一个邪恶的政权、体制。你不加入这个组织，就会被孤立、排斥。它让人从小学说假话，做违心的事情，而且理所应当理直气壮。我也很欣慰，后来一直没有加入共产党，可以说抵御了利益前程的诱惑，我一直坚信，这辈子该咋样咋样，我不会为了更多的前程、额外的利益而去入党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 12:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/7/n11773714.md#1" target="_blank">每日三退声明精选（2020/01/06）</a><br></h3>我是一个年近古稀的老人了，经历了文化大革命，也被共产党迫害过，但是由于环境闭塞，受党文化影响，一直没有看清共匪的邪恶，现在经历过很多大法的神奇事情，渐渐理解了无神论是邪恶，现在自愿退出共产党的少先队组织，希望更多的人能认清共产邪党的邪恶，与它划清界限。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 12:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/5/n11769417.md#1" target="_blank">因应武汉肺炎 香港启动“严重应变级别”</a><br></h3>武汉爆发疑似萨斯疫情，大陆社交媒体疯传后官方再补发公告，短短三天个案从27例飙升44例。香港近期到过武汉后发热、呼吸道感染及肺炎症状入院治疗有8人。港澳应对升级，香港启动“严重应变级别”。专家批北京政府处理失当，后果严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/5/n11768943.md#1" target="_blank">安徽淮南男子杀害女友藏尸行李箱 被判死刑</a><br></h3>近日，安徽淮南男子刘某杀害女友藏尸行李箱一案宣判，刘某一审被判处死刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:55 PM							</td></tr>
@@ -34,6 +35,5 @@
 
 责.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 10:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/4/n11767423.md#1" target="_blank">大批明星搭机资料遭国航员工泄露</a><br></h3>日前，中国国际航空公司证实有员工外泄数位明星的飞行纪录。目前，该员工已被做出停飞处分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/3/n11764636.md#1" target="_blank">每日三退声明精选（2020/01/02）</a><br></h3>大学时，一句入党好，被欺骗提交入党申请书，参加了党课学习，在党员转正时候就察觉到班党委阶级斗争，埋下了党权利熏心种子；工作后，境外网站发布社会牢骚，被派出所秋后算账请去喝茶，更是觉得抱怨的牢骚一点错都没有；现在隐蔽的查询共匪的过去事实，真是原来真想这么邪恶，现在已经不再对共匪会给社会带来实惠报任何幻想，本人声明退出共匪组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 11:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zdqyi2905/djy/blob/master/gb/ncid282_3.md#1<br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zdqyi2905/djy/blob/master/gb/ncid282_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_3.htm">http://www.epochtimes.com/gb/ncid282_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
