--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,4 +1,14 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786768.md#1" target="_blank">中共稳经济拉开序幕 各地投资万亿搞基建</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786768.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/10/090609180407100160-150x120.jpg" align ="left"></a>今年1月份，大陆武汉等省市已经拉开了大兴土木搞基建的序幕，据悉这是大陆今年稳经济增长的一部分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 3:52 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787039.md#1" target="_blank">韩粉称“若蔡英文得800万票请全台吃鸡排”</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787039.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001110958202699-1-150x120.jpg" align ="left"></a>在台湾总统大选投票之前，一名据信是国民党候选人韩国瑜的粉丝扬言，如果民进党候选人、现任中华民国总统蔡英文拿到800万票，他就请台湾2,300万人吃鸡排，不料蔡英文以817万票高票胜选，形同对他狠狠地打脸。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 2:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786635.md#1" target="_blank">台湾人从海外回乡 用选票向中共传递何信息</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786635.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NM23Q-1-150x120.jpg" align ="left"></a>当地时候1月11日晚，台湾大选蔡英文以压倒性优势顺利连任总统。专家表示，本次选举体现出台湾民众对中共日益嚣张威权主义的拒绝，也是在向中共专制说“不”。选举结果对中共而言是巨大挫败。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 1:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786803.md#1" target="_blank">国民党内咎责声浪高涨 党主席之争提前开打</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786803.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20200111PHO0178l-150x120.jpg" align ="left"></a>总统选举结果揭晓，国民党中央成了众矢之的，在开票过程中，一度有民众在国民党中央党部外激动地要求党主席吴敦义下台以示负责。吴敦义则率党内一级主管向社会鞠躬，表示“没有恋栈的问题”，将于15日向中常会提总辞。吴敦义的请辞，也预告国民党主席之争将开打。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 1:01 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786676.md#1" target="_blank">所属党立委选举失利 陈水扁：从此退出政坛</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786676.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/eb8bbc6d52693552ef1a5c826ac77042-150x120.jpg" align ="left"></a>中华民国前总统陈水扁在这次台湾选举中支持“一边一国行动党”，在该党选举失利后，阿扁今天（1月12日）宣布“从此退出政坛！谢谢了！再见了！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 11:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786589.md#1" target="_blank">加媒：对中共强硬立场 蔡英文赢得总统连任</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786589.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/283610c560a081ff638271734ebfe859-150x120.jpg" align ="left"></a>加拿大主流媒体《环球邮报》11日刊登驻亚洲特派员万德山（Nathan Vander Klippe）的文章称，因台湾选民支持民进党对中共的强硬立场，台湾总统蔡英文赢得大选，获得连任。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 11:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786421.md#1" target="_blank">加国检察官：孟晚舟案符合引渡至美国原则</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786421.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/3-can_21884547-150x120.jpg" align ="left"></a>加拿大司法部周六（1月11日）表示，美国对中国最大网络设备商华为公司首席财务官孟晚舟的指控，在加拿大也适用，孟晚舟是犯罪，应当以涉嫌欺诈将其引渡到美国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 10:04 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/3/n11766483.md#1" target="_blank">中远海运如何成为“一带一路”背后推手</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/3/n11766483.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1JI4UE-150x120.jpg" align ="left"></a>近年来，中共在欧洲港口的投资迅速增长，引发欧盟对中共不断扩大影响力的担忧。荷兰国际关系学院Clingendael上月发布报告称，近年来，中企在欧洲港口的商业参与已被日益政治化。中共最得利的工具是中远海运公司。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 9:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11786193.md#1" target="_blank">【热点互动】台湾大选红绿对决 习承诺或落空</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11786193.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e8f0bac1c06359_ttl7day4ZF_a07bcaf7664c01c9-150x120.jpg" align ="left"></a>台湾大选实为红绿对决！习近平党内承诺将落空？王立强案或促《反渗透法》切下第一刀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 7:27 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11786268.md#1" target="_blank">英美加欧日政要和各界贺蔡英文 赞台湾民主</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11786268.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NM6GV-1-150x120.jpg" align ="left"></a>1月11日，台湾大选结果揭晓，总统蔡英文以史上最高得票数大赢对手韩国瑜，成功连任。白宫国安会、美国国务院、英国、日本、欧盟、加拿大第一时间都发布声明祝贺蔡总统连任，肯定台湾是全球自由民主的典范之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 6:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11786063.md#1" target="_blank">【拍案惊奇】蔡英文连任！北京的三层误判</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11786063.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X5717-600x400-2-150x120.jpg" align ="left"></a>今天（1月11日），台湾大选蔡英文大胜，而去年初她的胜算还很低。相反，她的对手韩国瑜却声势正旺。可过去一年发生了什么？让选情发生了这样的逆转。最终要感谢的，其实是北京的“误判”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 5:24 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11786132.md#1" target="_blank">台湾大选蔡英文大胜 中共散播假新闻失败</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11786132.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X5907_2-150x120.jpg" align ="left"></a>1月11日，台湾总统蔡英文以破纪录的800万张选票获得连任，大大击败了对手韩国瑜。中共在台湾散播谎言以及开展宣传活动，企图帮助韩赢得获选。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 5:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11786070.md#1" target="_blank">防堵学术间谍 美ICE加强调查国际学生</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11786070.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/05/Fotolia_66192601_Subscription_L-150x120.jpg" align ="left"></a>美国联邦政府加强访问及检查国际学者、研究人员及学生的签证及其它文件，麻省理工学院向所有教职员发出通告，提醒他们注意并配合移民官员的检查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 4:50 AM							</td></tr>
@@ -23,17 +33,7 @@
 李新说，何方美始终态.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 10:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785388.md#1" target="_blank">超过马英九 蔡英文获中华民国史上最高票</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785388.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/9d2d4244adbe08c5598abf8b5b441fe5-600x400-150x120.jpg" align ="left"></a>2020中华民国总统大选今天（1月11日）投开票，根据中选会统计，争取连任的总统蔡英文近晚间9时15分，得票数已经超过810万票，打破2008年马英九、前副总统萧万长的765万9,014票，改写了历年民选总统最高得票数。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 9:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785286.md#1" target="_blank">蔡英文得票破800万 韩国瑜承认败选</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785286.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e8d93c8c8677f3_ttl7day54Z_163617-150x120.jpg" align ="left"></a>2020总统大选开票仍在进行中，总统蔡英文得票已破800万，国民党总统候选人韩国瑜已承认败选，中外记者会直接取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 9:35 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11783658.md#1" target="_blank">【更新】蔡英文破817万票 民进党立委过半</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11783658.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X5511-150x120.jpg" align ="left"></a>中华民国第15任总统副总统及第10届立法委员选举1月11日举行，投票时间为上午8时至下午4时，届时将选出总统、副总统，立法委员113人。选举结果，最快晚上10时完成开票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 9:32 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785230.md#1" target="_blank">蔡英文召开记者会 提两岸互动关键8个字</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785230.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NM24W-1-150x120.jpg" align ="left"></a>初步计票结果显示，台湾总统蔡英文在周六（1月11日）的总统大选中已经超过800万票，大幅领先。蔡英文总统将在当晚举行国际记者会，并在现场提出两岸良性互动的关键8个字。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 9:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785224.md#1" target="_blank">得票数大幅领先 蔡英文脸书发文致谢</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785224.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/82203587_10156365645966065_5667015918924857344_o-150x120.jpg" align ="left"></a>2020中华民国总统大选仍在开票，目前总统蔡英文得票数已超过700多万票。蔡英文傍晚在脸书发文表示，“辣台派的大家都来了吗？谢谢大家一路与我同行。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 8:49 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785199.md#1" target="_blank">蔡英文得票破810万  超2016年689万票纪录</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785199.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001110048062378-150x120.jpg" align ="left"></a>2020中华民国大选今天（1月11日）举行投开票，据中选会统计，争取连任的总统蔡英文得票数超过810万票，突破她2016年当选的票数纪录。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 8:37 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785177.md#1" target="_blank">台湾大选开票尾声 韩国瑜抵竞选总部不发一语</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785177.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NM25L-150x120.jpg" align ="left"></a>台湾总统大选开票已近尾声，中国国民党总统候人韩国瑜周六（1月11日）傍晚来到位于国民党高雄市党部的全国竞选总部，面对媒体不发一语。晚些时候，他将发表谈话。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 8:11 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785035.md#1" target="_blank">华日：民进党若胜利意味着台湾保有民主自由</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785035.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/b6ab84c5a2c1734e78bb368d304d9660-150x120.jpg" align ="left"></a>值台湾大选之际，《华尔街日报》刊文表示，美国与中国共产党的地缘政治竞争结果将部分取决于南亚和东亚国家，即台湾接受中共声称的该地区的统治权还是与美国团结起来、争取保持独立，并成为一个强大的经济体。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 8:03 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/6/n11772884.md#1" target="_blank">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/6/n11772884.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/hfjbjcakpbmbaijb-150x120.jpg" align ="left"></a>2020台湾总统大选倒计时，1月11日将是最后投票之日。当天开票之夜，新唐人电视台和《大纪元时报》将在现场进行全程追踪和网络直播，并连线香港即时反应港人的关注。请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 7:32 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785019.md#1" target="_blank">韩国瑜落后蔡英文100多万票 支持者落泪</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785019.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20200111PHO0117l-150x120.jpg" align ="left"></a>台湾总统大选投票，下午四点开始各票站正陆续进行开票。目前蔡英文领先韩国瑜100多万票。国民党总统候选人韩国瑜高雄竞总观票人潮不如以往，约2000张的椅子只坐6成。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 6:56 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785040.md#1" target="_blank">台湾大选谁当选总统 中共密切关注</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785040.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NM3L1-150x120.jpg" align ="left"></a>周六（1月11日），台湾举行备受全球关注的总统选举及立法委员选举。路透社称，这次大选将受到中共的密切关注，中共通过散布虚假信息等企图干预大选。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 6:38 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11784266.md#1" target="_blank">大陆阜兴系募资368.45亿 挪用365.65亿</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11784266.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/08/1508120341531459-150x120.jpg" align ="left"></a>中共证监会日前发布了对阜兴系挪用募集资金的处理决定，据悉，2019年，阜兴系累计募集本金368.45亿元（人民币，下同），其中有365.65亿元被挪用。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 6:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11784473.md#1" target="_blank">【翻墙必看】伊朗将军被杀 传7常委急开会</a><br></h3>伊朗二号人物苏莱曼尼被美军击毙的突发新闻，在全球迅速传播。有海外中文媒体引述中南海知情人的消息说，为防暗杀和定点清除，中共领导人安保级别全天候提升至史上最高。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 8:47 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785143.md#1" target="_blank">韩国瑜落后 里长：陌生年轻人全跑出来投票</a><br></h3>目前，国民党总统候选人韩国瑜一路落败蔡英文。有里长在投票结束后惊呼“吓死了”，陌生的年轻人全部跑出来投票了。有报导说，不少首投族暗示某人令亡国感暴增。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 8:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786649.md#1" target="_blank">大陆“国家一级演员”受贿细节首次被曝光</a><br></h3>大陆知名男高音歌唱家、云南艺术学院原副院长王红星落马近三年后获刑。其受贿细节首次被曝光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 1:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789372.md#1" target="_blank">每日三退声明精选（2020/01/11）</a><br></h3>本人是来自北京的赵祁疆。在中学时代，因为受到了中共邪党的蛊惑，我成为了加入邪党先锋队青年团的积极分子。中学期间，我的母亲曾经因为记录中共对退伍军人杀鸡取卵，兔死狗烹的残暴行为而被中共官员截查并强制删除手机内容。在移民加拿大以后，我了解了中共邪党欺人瞒世、草芥人命的邪恶行径。在大学攻读经济学和社会学期间，通过教授的谆谆善诱和不懈帮助，我终于了解了中共邪党的本质.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 12:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
